global static XPCOM strings considered harmful! fix crash on quit, and crash when autocompleting on 10.2.x and 10.3.x after history cleanup. thanks to biesi for headsup. b=354034, 354062